@@ -4,6 +4,7 @@
   </head>
   <body>
     <p id="p_id" name="p_name" class="p_class">Static Elements Page</p>
+    <label for="text_field_id">Text Field</label>
     <input id="text_field_id" name="text_field_name" class="text_field_class" title="text_field_title"
            size="40" type="text" />
 
