@@ -4,7 +4,7 @@ require 'druid/elements'
 describe Druid::Elements::TextField do
   describe "when mapping how to find an element" do
     it "should map watir types to same" do
-      [:class, :id, :index, :name, :text, :xpath, :title].each do |t|
+      [:class, :id, :index, :name, :text, :xpath, :title, :label].each do |t|
         identifier = Druid::Elements::TextField.identifier_for t => 'value'
         expect(identifier.keys.first).to eql t
       end
