@@ -10,6 +10,7 @@
   * Added the ability to find a TableCell by providing a String to the [] method from TableRow
   * Updated link to be able to identify by title
   * Updated div to be able to identify by title
+  * Added ability to find text_field by :text and :label
 * Fixes
   * Modified text area methods so it clears before setting new text
   * Updated [] method on Table to return nil when bad row header is provided
